﻿-- 0.4034 --
* Help file additions (thanks naga & ullner)
* Fixed a few issues with files not being hashed correctly (thanks garg)
* More ADC fixes (thanks sed)

-- 0.4033 2004-09-27 --
*** WARNING *** 
This update will change all your config files and queues, and it is 
very probable that you won't be able to revert back to an older version
once the update has been done!!!
Also, finish your queue file before upgrading if you care for your
international filenames in it - they will not be correctly converted.
*** WARNING ***

* Fixed a rare download crash (thanks farcry)
* Fixed tab dropping in the last position (thanks trem)
* Fixed directory sorting in the file listings (thanks trem)
* Files that can't be moved to the target drive from the temp folder
  are now renamed to their real name
* Text with unix and mac line end encodings should now be correctly displayed
* TTH Values are used for right click download menus when available
* Upgraded to WTL 7.5.4196
* Updated license to allow others to release legal binaries compiled against WTL
* Moved the core structures to UTF-8 to allow correct internationalisation (major change)
* Moving towards full unicodization of the user interface, MS layer for unicode
  now needed for old crappy windows versions, and I don't know how good that works. The
  rest of us can now see correct names being displayed in file listings (for XML filelists anyway)
* Rewrote the share manager so that it doesn't lock the whole of DC++ while reading the
  directories of shared files when refreshing the list
* Added virtual share name
* Removed autosearch string, it's not used any more
* Fixed a tth hash speed bug (hashing should be much faster now)
* File listings are now generated on the fly when someone needs them
* Added UPnP support (thanks mark gillespie)
* Ctrl-L now opens file lists (thanks garg)
* Various ADC patches (thanks sedulus)
* Slightly changed temporary download name
* TTH Leaf uploads no longer logged (thanks garg)