@@ -87,6 +87,7 @@ public:
 	virtual void kick(const User* user, const string& aMessage) = 0;
 	virtual void ban(const User* user, const string& aMessage, time_t seconds) = 0;
 	virtual void send(const string& aMessage) = 0;
+	virtual void sendUserCmd(const string& aUserCmd) = 0;
 	virtual void redirect(const User* user, const string& aHub, const string& aMessage) = 0;
 	virtual void search(int aSizeMode, int64_t aSize, int aFileType, const string& aString) = 0;
 	virtual void password(const string& pwd) = 0;
@@ -191,5 +192,5 @@ private:
 #endif // _CLIENT_H
 /**
  * @file
- * $Id: Client.h,v 1.87 2004/09/10 14:44:16 arnetheduck Exp $
+ * $Id: Client.h,v 1.88 2004/10/02 22:22:49 arnetheduck Exp $
  */
