@@ -13,7 +13,14 @@
 <h1>DC++ Changelog</h1>
 See the version history of DC++ below.
 
-<h2>0.4033</h2>
+<h2>0.4034</h2>
+<ul>
+  <li>Help file additions (thanks naga &amp; ullner)</li>
+  <li>Fixed a few issues with files not being hashed correctly (thanks garg)</li>
+  <li>More ADC fixes (thanks sed)</li>
+</ul>
+
+<h2>0.4033 <span style="color: gray;">(2004-09-27)</span></h2>
 <ul>
   <li>** WARNING ***</li>
   <li>-- This update will change all your config files and queues, and it is --</li>
