@@ -6,17 +6,20 @@
   <link type="text/css" rel="stylesheet" href="office11.css">
 </head>
 <body>
-<h1>Contributors</h1>
-<li>Naga</li>
 <h1>Help File Credits and License</h1>
 <br>
 Copyright (c) 2004 Todd Pederzani, Walter Doekes<br>
 <br>
 Permission is granted to copy, distribute and/or modify this document
-under the terms of the <a href="fdl.html">GNU Free Documentation
-License</a>, Version 1.2 or any later version published by the Free
+under the terms of the GNU Free Documentation
+License, Version 1.2 or any later version published by the Free
 Software Foundation; with no Invariant Sections, no Front-Cover Texts,
 and no Back-Cover Texts. A copy of the license is included in the
-section entitled "GNU Free Documentation License".
+section entitled "<a href="fdl.html">GNU Free Documentation License</a>".
+<h1>Contributors</h1>
+<ul>
+  <li>Pretorian</li>
+  <li>Naga</li>
+</ul>
 </body>
 </html>
