@@ -122,7 +122,8 @@ being out of date, but for users on slow connections, keeping file
 lists can save time. <em>Since the file list isn't curent, don't be
 surprised if the files you enqueue to download have been removed by the
 user, or moved.</em></dd>
-  <dt><a name="#disconnect"></a>Automatically Disconnect Users Who Leave the Hub</dt>
+  <dt><a name="#disconnect"></a>Automatically Disconnect Users Who
+Leave the Hub</dt>
   <dd>The Direct Connect spirit is all about sharing. You are only
 sharing when you are connected to one or more hubs. In the past, users
 of questionable integrity and spirit logged onto a hub, selected a
@@ -152,7 +153,8 @@ with your current share. <span style="font-style: italic;">Disabling
 this option is really only needed for really large shares where
 refreshing takes so much time that the client is unusable in the mean
 time.</span></dd>
-  <dt><a id="antifrag" name="antifrag">Use AntiFragmentation Method for Downloads</a></dt>
+  <dt><a name="antifrag">Use AntiFragmentation Method for
+Downloads</a></dt>
   <dd>This option will try to reserve the full space needed for a file
 when starting the download. This should reduce the fragmentation of
 files on your hard drive. (Fragmentation is bad because reading files
