@@ -146,13 +146,14 @@ public:
 
 		if(ctrlStatus.IsWindow()) {
 			CRect sr;
-			int w[3];
+			int w[4];
 			ctrlStatus.GetClientRect(sr);
-			w[2] = sr.right - 16;
+			w[3] = sr.right - 16;
+			w[2] = max(w[3] - 100, 0);
 			w[1] = max(w[2] - 100, 0);
 			w[0] = max(w[1] - 100, 0);
 
-			ctrlStatus.SetParts(3, w);
+			ctrlStatus.SetParts(4, w);
 		}
 		
 		CRect rc(rect);
@@ -193,8 +194,9 @@ private:
 	static int columnIndexes[COLUMN_LAST];
 	
 	void updateStatus() {
-		ctrlStatus.SetText(1, Text::toT(Util::formatBytes(totalBytes)).c_str());
-		ctrlStatus.SetText(2, Text::toT(Util::formatBytes((totalTime > 0) ? totalBytes * ((int64_t)1000) / totalTime : 0) + "/s").c_str());
+		ctrlStatus.SetText(1, Text::toT(Util::toString(ctrlList.GetItemCount()) + ' ' + STRING(ITEMS)).c_str());
+		ctrlStatus.SetText(2, Text::toT(Util::formatBytes(totalBytes)).c_str());
+		ctrlStatus.SetText(3, Text::toT(Util::formatBytes((totalTime > 0) ? totalBytes * ((int64_t)1000) / totalTime : 0) + "/s").c_str());
 	}
 
 	void updateList(const FinishedItem::List& fl) {
@@ -208,7 +210,7 @@ private:
 	}
 
 	void addEntry(FinishedItem* entry);
-	
+
 	virtual void on(AddedDl, FinishedItem* entry) throw() {
 		PostMessage(WM_SPEAKER, SPEAK_ADD_LINE, (WPARAM)entry);
 	}
@@ -228,5 +230,5 @@ private:
 
 /**
  * @file
- * $Id: FinishedFrame.h,v 1.18 2004/09/10 14:44:17 arnetheduck Exp $
+ * $Id: FinishedFrame.h,v 1.19 2004/10/02 22:22:49 arnetheduck Exp $
  */
